RESOLVED FIXED104762
[Resource Timing] Failed resources shouldn't be recorded in the buffer
https://bugs.webkit.org/show_bug.cgi?id=104762
Summary [Resource Timing] Failed resources shouldn't be recorded in the buffer
James Simonsen
Reported 2012-12-11 19:52:18 PST
[Resource Timing] Failed resources shouldn't be recorded in the buffer
Attachments
Patch (4.68 KB, patch)
2012-12-11 19:52 PST, James Simonsen
no flags
Patch for landing (4.70 KB, patch)
2012-12-12 10:37 PST, James Simonsen
no flags
James Simonsen
Comment 1 2012-12-11 19:52:41 PST
Tony Gentilcore
Comment 2 2012-12-12 10:00:29 PST
Comment on attachment 178950 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=178950&action=review > LayoutTests/http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_failures.html:27 > +<p>This test validates that all of the initiator types are represented even when dynamically inserted.</p> This text needs to be updated.
James Simonsen
Comment 3 2012-12-12 10:37:48 PST
Created attachment 179079 [details] Patch for landing
WebKit Review Bot
Comment 4 2012-12-12 11:24:48 PST
Comment on attachment 179079 [details] Patch for landing Clearing flags on attachment: 179079 Committed r137488: <http://trac.webkit.org/changeset/137488>
WebKit Review Bot
Comment 5 2012-12-12 11:24:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.