[Resource Timing] Failed resources shouldn't be recorded in the buffer https://bugs.webkit.org/show_bug.cgi?id=104762

Reviewed by Tony Gentilcore.

Source/WebCore:

Test: http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_failures.html

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::loadDone):

LayoutTests:

* http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_failures-expected.txt: Added.
* http/tests/w3c/webperf/submission/resource-timing/html/test_resource_ignore_failures.html: Added.


Canonical link: https://commits.webkit.org/123043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137488 268f45cc-cd09-0410-ab3c-d52691b4dbfc